--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,11 @@
 	"autoload": {
 		"psr-4": {
             "App\\": "app/",
-            "Core\\": "Core/"
+            "Core\\": "Core/",
+            "Test\\": "Test"
         },
         "files": ["Core/helper.php"]
 	},
 	"require": {
-		"catfan/Medoo": "^1.0",
-		"illuminate/database": "*"
 	}
 }
